--- a/citation-network-ui/package.json
+++ b/citation-network-ui/package.json
@@ -12,6 +12,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.7.7",
     "cytoscape": "^3.30.2",
+    "firebase": "^9.23.0",
     "react": "^18.3.1",
     "react-cytoscapejs": "^2.0.0",
     "react-dom": "^18.3.1",
