--- a/citation-network-ui/package.json
+++ b/citation-network-ui/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
+    "@fontsource/roboto": "^5.1.0",
     "@mui/icons-material": "^6.1.5",
     "@mui/material": "^6.1.5",
     "@mui/styles": "^6.1.0",
@@ -14,7 +15,9 @@
     "axios": "^1.7.7",
     "cytoscape": "^3.30.2",
     "firebase": "^9.23.0",
-    "framer-motion": "^11.11.10",
+    "framer": "^2.4.1",
+    "framer-motion": "^10.13.1",
+    "process": "^0.11.10",
     "react": "^18.3.1",
     "react-cytoscapejs": "^2.0.0",
     "react-dom": "^18.3.1",
