--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,6 @@ bin/
 data/tmp_pdf/
 lightning_logs/
 trained_model/*
-*.db
 *.p
 *.pyc
 .idea
@@ -21,3 +20,4 @@ citation_network
 find_path
 graph_bfs
 pagerank
+.vscode
