--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -35,11 +35,15 @@ jobs:
       run: |
         # Build and push frontend
         docker build -t $ECR_REGISTRY/$ECR_FRONTEND_REPOSITORY:$GITHUB_SHA -f docker/frontend.Dockerfile .
+        docker build -t $ECR_REGISTRY/$ECR_FRONTEND_REPOSITORY:latest -f docker/frontend.Dockerfile .
         docker push $ECR_REGISTRY/$ECR_FRONTEND_REPOSITORY:$GITHUB_SHA
+        docker push $ECR_REGISTRY/$ECR_FRONTEND_REPOSITORY:latest
         
         # Build and push backend
         docker build -t $ECR_REGISTRY/$ECR_BACKEND_REPOSITORY:$GITHUB_SHA -f docker/backend.Dockerfile .
+        docker build -t $ECR_REGISTRY/$ECR_BACKEND_REPOSITORY:latest -f docker/backend.Dockerfile .
         docker push $ECR_REGISTRY/$ECR_BACKEND_REPOSITORY:$GITHUB_SHA
+        docker push $ECR_REGISTRY/$ECR_BACKEND_REPOSITORY:latest
     
     - name: Update ECS service
       run: |
