--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -5,6 +5,13 @@ server {
     root /usr/share/nginx/html;
     index index.html;
 
+    # Add a dedicated health check location
+    location /health {
+        access_log off;
+        add_header Content-Type text/plain;
+        return 200 'healthy';
+    }
+    
     # Enable gzip compression
     gzip on;
     gzip_types text/plain text/css application/json application/javascript text/xml application/xml application/xml+rss text/javascript;
