--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -17,13 +17,13 @@ server {
     gzip_types text/plain text/css application/json application/javascript text/xml application/xml application/xml+rss text/javascript;
     
     location / {
-        try_files $uri $uri/ /index.html;
+        try_files $uri $uri/ /index.html =404;
         expires 1y;
         add_header Cache-Control "public, no-transform";
     }
 
-    location /api/ {
-        proxy_pass http://backend:8000/;
+    location /api {
+        proxy_pass http://localhost:8000/;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection 'upgrade';
