--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -34,14 +34,25 @@ jobs:
         ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
       run: |
         # Build and push frontend
-        docker build -t $ECR_REGISTRY/$ECR_FRONTEND_REPOSITORY:$GITHUB_SHA -f docker/frontend.Dockerfile .
-        docker build -t $ECR_REGISTRY/$ECR_FRONTEND_REPOSITORY:latest -f docker/frontend.Dockerfile .
+        docker build \
+          --build-arg REACT_APP_FIREBASE_API_KEY="${{ secrets.REACT_APP_FIREBASE_API_KEY }}" \
+          --build-arg REACT_APP_FIREBASE_AUTH_DOMAIN="${{ secrets.REACT_APP_FIREBASE_AUTH_DOMAIN }}" \
+          --build-arg REACT_APP_FIREBASE_PROJECT_ID="${{ secrets.REACT_APP_FIREBASE_PROJECT_ID }}" \
+          --build-arg REACT_APP_FIREBASE_STORAGE_BUCKET="${{ secrets.REACT_APP_FIREBASE_STORAGE_BUCKET }}" \
+          --build-arg REACT_APP_FIREBASE_MESSAGING_SENDER_ID="${{ secrets.REACT_APP_FIREBASE_MESSAGING_SENDER_ID }}" \
+          --build-arg REACT_APP_FIREBASE_APP_ID="${{ secrets.REACT_APP_FIREBASE_APP_ID }}" \
+          --build-arg REACT_APP_FIREBASE_MEASUREMENT_ID="${{ secrets.REACT_APP_FIREBASE_MEASUREMENT_ID }}" \
+          -t $ECR_REGISTRY/$ECR_FRONTEND_REPOSITORY:$GITHUB_SHA \
+          -t $ECR_REGISTRY/$ECR_FRONTEND_REPOSITORY:latest \
+          -f docker/frontend.Dockerfile .
         docker push $ECR_REGISTRY/$ECR_FRONTEND_REPOSITORY:$GITHUB_SHA
         docker push $ECR_REGISTRY/$ECR_FRONTEND_REPOSITORY:latest
         
         # Build and push backend
-        docker build -t $ECR_REGISTRY/$ECR_BACKEND_REPOSITORY:$GITHUB_SHA -f docker/backend.Dockerfile .
-        docker build -t $ECR_REGISTRY/$ECR_BACKEND_REPOSITORY:latest -f docker/backend.Dockerfile .
+        docker build \
+          -t $ECR_REGISTRY/$ECR_BACKEND_REPOSITORY:$GITHUB_SHA \
+          -t $ECR_REGISTRY/$ECR_BACKEND_REPOSITORY:latest \
+          -f docker/backend.Dockerfile .
         docker push $ECR_REGISTRY/$ECR_BACKEND_REPOSITORY:$GITHUB_SHA
         docker push $ECR_REGISTRY/$ECR_BACKEND_REPOSITORY:latest
     
