--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,6 +1,6 @@
 server {
     listen 80;
-    server_name _;
+    server_name paperverse.co www.paperverse.co;
     
     root /usr/share/nginx/html;
 
