--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -26,42 +26,17 @@ jobs:
     - name: Login to Amazon ECR
       id: login-ecr
       uses: aws-actions/amazon-ecr-login@v1
-    
-    - name: Build and push Docker images
-      env:
-        ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
-        IMAGE_TAG: ${{ github.sha }}
-      run: |
-        # Build and push frontend
-        docker build \
-          --build-arg REACT_APP_FIREBASE_API_KEY="${{ secrets.REACT_APP_FIREBASE_API_KEY }}" \
-          --build-arg REACT_APP_FIREBASE_AUTH_DOMAIN="${{ secrets.REACT_APP_FIREBASE_AUTH_DOMAIN }}" \
-          --build-arg REACT_APP_FIREBASE_PROJECT_ID="${{ secrets.REACT_APP_FIREBASE_PROJECT_ID }}" \
-          --build-arg REACT_APP_FIREBASE_STORAGE_BUCKET="${{ secrets.REACT_APP_FIREBASE_STORAGE_BUCKET }}" \
-          --build-arg REACT_APP_FIREBASE_MESSAGING_SENDER_ID="${{ secrets.REACT_APP_FIREBASE_MESSAGING_SENDER_ID }}" \
-          --build-arg REACT_APP_FIREBASE_APP_ID="${{ secrets.REACT_APP_FIREBASE_APP_ID }}" \
-          --build-arg REACT_APP_FIREBASE_MEASUREMENT_ID="${{ secrets.REACT_APP_FIREBASE_MEASUREMENT_ID }}" \
-          -t $ECR_REGISTRY/$ECR_FRONTEND_REPOSITORY:$IMAGE_TAG \
-          -t $ECR_REGISTRY/$ECR_FRONTEND_REPOSITORY:latest \
-          -f docker/frontend.Dockerfile .
-        docker push $ECR_REGISTRY/$ECR_FRONTEND_REPOSITORY:$IMAGE_TAG
-        docker push $ECR_REGISTRY/$ECR_FRONTEND_REPOSITORY:latest
-        
-        # Build and push backend
-        docker build \
-          -t $ECR_REGISTRY/$ECR_BACKEND_REPOSITORY:$IMAGE_TAG \
-          -t $ECR_REGISTRY/$ECR_BACKEND_REPOSITORY:latest \
-          -f docker/backend.Dockerfile .
-        docker push $ECR_REGISTRY/$ECR_BACKEND_REPOSITORY:$IMAGE_TAG
-        docker push $ECR_REGISTRY/$ECR_BACKEND_REPOSITORY:latest
 
     - name: Deploy to EC2
       env:
         PRIVATE_KEY: ${{ secrets.EC2_SSH_PRIVATE_KEY }}
         EC2_HOST: ${{ secrets.EC2_HOST }}
         ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
-        AWS_REGION: ${{ env.AWS_REGION }}
       run: |
+        # Debug: Print some info (redacted for security)
+        echo "Deploying to host: ${EC2_HOST}"
+        echo "Using ECR registry: ${ECR_REGISTRY}"
+        
         # Write the SSH key to a file
         mkdir -p ~/.ssh
         echo "$PRIVATE_KEY" > ~/.ssh/deploy_key
@@ -70,46 +45,44 @@ jobs:
         # Add host key verification
         ssh-keyscan -H $EC2_HOST >> ~/.ssh/known_hosts
         
-        # Create remote script with environment variables
+        # Try a simple SSH command first to test connection
+        echo "Testing SSH connection..."
+        ssh -i ~/.ssh/deploy_key -v ec2-user@$EC2_HOST 'echo "SSH connection successful"'
+        
+        # If SSH test succeeds, proceed with deployment
+        echo "Creating deploy script..."
         cat << EOF > deploy.sh
         #!/bin/bash
         set -e
+        echo "Starting deployment on EC2..."
         
         # Export AWS credentials for ECR login
         export AWS_ACCESS_KEY_ID='${{ secrets.AWS_ACCESS_KEY_ID }}'
         export AWS_SECRET_ACCESS_KEY='${{ secrets.AWS_SECRET_ACCESS_KEY }}'
         export AWS_DEFAULT_REGION='${AWS_REGION}'
         
-        # Ensure docker is running and ec2-user has permissions
-        sudo systemctl start docker
-        sudo usermod -aG docker ec2-user
-        # Force the new group to take effect
-        exec sg docker -c '
-          # Login to ECR
-          aws ecr get-login-password --region ${AWS_REGION} | docker login --username AWS --password-stdin ${ECR_REGISTRY}
-          
-          # Pull latest images
-          cd /home/ec2-user
-          docker-compose pull
-          
-          # Backup the database if it exists
-          if [ -f data/citation_network.db ]; then
-            cp data/citation_network.db data/citation_network.db.backup
-          fi
-          
-          # Restart containers
-          docker-compose down || true
-          docker-compose up -d
-          
-          # Clean up old images and backups
-          docker image prune -f
-          find data -name "citation_network.db.backup" -mtime +7 -delete
-        '
+        # Test AWS credentials
+        echo "Testing AWS credentials..."
+        aws sts get-caller-identity
+        
+        # Test Docker
+        echo "Testing Docker..."
+        sudo docker ps
+        
+        # Test ECR login
+        echo "Testing ECR login..."
+        aws ecr get-login-password --region ${AWS_REGION} | sudo docker login --username AWS --password-stdin ${ECR_REGISTRY}
+        
+        echo "Deployment script completed successfully"
         EOF
         
         # Copy and execute deploy script
-        scp -i ~/.ssh/deploy_key deploy.sh ec2-user@$EC2_HOST:/home/ec2-user/
-        ssh -i ~/.ssh/deploy_key ec2-user@$EC2_HOST 'chmod +x /home/ec2-user/deploy.sh && /home/ec2-user/deploy.sh'
+        echo "Copying deploy script to EC2..."
+        scp -i ~/.ssh/deploy_key -v deploy.sh ec2-user@$EC2_HOST:/home/ec2-user/
+        
+        echo "Executing deploy script..."
+        ssh -i ~/.ssh/deploy_key -v ec2-user@$EC2_HOST 'chmod +x /home/ec2-user/deploy.sh && /home/ec2-user/deploy.sh'
+          
     - name: Verify Deployment
       env:
         EC2_HOST: ${{ secrets.EC2_HOST }}
