--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,30 +1,7 @@
-# Buffer size for POST submissions
-client_body_buffer_size 10K;
-client_max_body_size 8m;
-
-# Buffer size for Headers
-client_header_buffer_size 1k;
-
-# Max time to receive client headers/body
-client_body_timeout 12;
-client_header_timeout 12;
-
-# Max time to keep a connection open for
-keepalive_timeout 15;
-
-# Max time for the client accept/receive a response
-send_timeout 10;
-
-# Skip buffering for static files
-sendfile on;
-
-# Optimize sendfile packets
-tcp_nopush on;
-
 server {
     listen 80;
     server_name paperverse.co www.paperverse.co;
-    
+
     # Cloudflare IP addresses
     set_real_ip_from 173.245.48.0/20;
     set_real_ip_from 103.21.244.0/22;
@@ -46,29 +23,32 @@ server {
     
     root /usr/share/nginx/html;
 
-    # Security headers
+    # Add security headers
+    add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
     add_header X-Frame-Options "SAMEORIGIN" always;
     add_header X-XSS-Protection "1; mode=block" always;
     add_header X-Content-Type-Options "nosniff" always;
     add_header Referrer-Policy "strict-origin-when-cross-origin" always;
-    add_header Content-Security-Policy "default-src 'self' https: data: 'unsafe-inline' 'unsafe-eval'; frame-ancestors 'self';" always;
-    add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
-    add_header Permissions-Policy "camera=(), microphone=(), geolocation=()" always;
+
+    # Add a dedicated health check location
+    location /health {
+        access_log off;
+        add_header Content-Type text/plain;
+        return 200 'healthy';
+    }
 
     # Enable gzip compression
     gzip on;
-    gzip_vary on;
-    gzip_min_length 1000;
-    gzip_proxied expired no-cache no-store private auth;
-    gzip_types text/plain text/css text/xml text/javascript application/x-javascript application/xml application/json;
-    gzip_disable "MSIE [1-6]\.";
+    gzip_types text/plain text/css application/json application/javascript text/xml application/xml application/xml+rss text/javascript;
+    
+    location / {
+        try_files $uri $uri/ /index.html =404;
+        expires 1y;
+        add_header Cache-Control "public, no-transform";
+    }
 
-    # API routes
-    location /api/ {
-        # Remove /api/ prefix when proxying to backend
-        rewrite ^/api/(.*) /$1 break;
-        
-        proxy_pass http://localhost:8000;
+    location /api {
+        proxy_pass http://localhost:8000/;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection 'upgrade';
@@ -77,29 +57,8 @@ server {
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
         proxy_cache_bypass $http_upgrade;
-        
-        # Timeouts
-        proxy_connect_timeout 60s;
-        proxy_send_timeout 60s;
-        proxy_read_timeout 60s;
-
-        # WebSocket support
-        proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection "upgrade";
-        
-        # Logging
-        access_log /var/log/nginx/api_access.log combined buffer=512k flush=1m;
-        error_log /var/log/nginx/api_error.log warn;
     }
 
-    # Health check endpoint
-    location /health {
-        access_log off;
-        add_header Content-Type text/plain;
-        return 200 'healthy\n';
-    }
-
-    # Backend health check
     location /api/health {
         proxy_pass http://localhost:8000/health;
         proxy_http_version 1.1;
@@ -107,33 +66,5 @@ server {
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
-        
-        access_log off;
     }
-
-    # Static files
-    location / {
-        try_files $uri $uri/ /index.html =404;
-        
-        # Cache control
-        expires 1y;
-        add_header Cache-Control "public, no-transform";
-        
-        # Security headers for static content
-        add_header X-Frame-Options "SAMEORIGIN" always;
-        add_header X-XSS-Protection "1; mode=block" always;
-        add_header X-Content-Type-Options "nosniff" always;
-        add_header Referrer-Policy "strict-origin-when-cross-origin" always;
-    }
-
-    # Deny access to hidden files
-    location ~ /\. {
-        deny all;
-        access_log off;
-        log_not_found off;
-    }
-
-    # Main logging
-    access_log /var/log/nginx/access.log combined buffer=512k flush=1m;
-    error_log /var/log/nginx/error.log warn;
 }
