checking why db not loaded in backedn

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -117,6 +117,10 @@ jobs:
         
         echo "Container logs..."
         sudo docker-compose logs
+
+        echo "Verifying database..."
+        sudo docker exec \$(sudo docker ps -q --filter name=backend) sqlite3 /app/data/citations_data.db ".tables"
+        sudo docker exec \$(sudo docker ps -q --filter name=backend) sqlite3 /app/data/citations_data.db "SELECT COUNT(*) FROM Nodes;"
         
         echo "Deployment script completed successfully"
         EOF
