--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -47,8 +47,8 @@ server {
         add_header Cache-Control "public, no-transform";
     }
 
-    location /api {
-        proxy_pass http://localhost:8000/;
+    location /api/ {
+        proxy_pass http://backend:8000/;
         proxy_http_version 1.1;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
@@ -59,10 +59,14 @@ server {
         proxy_connect_timeout 60s;
         proxy_send_timeout 60s;
         proxy_read_timeout 60s;
+
+        # Add error logging
+        error_log /var/log/nginx/api_error.log debug;
+        access_log /var/log/nginx/api_access.log;
     }
 
     location /api/health {
-        proxy_pass http://localhost:8000/health;
+        proxy_pass http://backend:8000/health;
         proxy_http_version 1.1;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
